Make multiselect a block item to stop overflowing in flex situations

--- a/src/app/components/multiselect/multiselect.css
+++ b/src/app/components/multiselect/multiselect.css
@@ -1,5 +1,6 @@
 .p-multiselect {
-    display: inline-flex;
+    display: flex;
+    text-overflow: ellipsis;
     cursor: pointer;
     position: relative;
     user-select: none;
